fix: restore overflow and height properties in BlogSide component

--- a/packages/web-qwik/src/components/blog/blog-side.scoped.scss
+++ b/packages/web-qwik/src/components/blog/blog-side.scoped.scss
@@ -14,8 +14,8 @@
   padding: 0 0.25rem;
   position: sticky;
   top: 4rem;
-  // overflow-y: auto;
-  // height: calc(100vh - 5rem);
+  overflow-y: auto;
+  height: calc(100vh - 5rem);
   width: 100%;
   max-width: 480px;
   display: flex;
@@ -27,6 +27,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   border-radius: 0.25rem;
   box-shadow: 0 0 0.125rem rgba(black, 0.2);
   overflow: hidden;
